优化list